homepage text and image alignment fixed, ref https://github.com/mozilla/sumo-project/issues/26

--- a/kitsune/sumo/static/sumo/scss/base/_utilities.scss
+++ b/kitsune/sumo/static/sumo/scss/base/_utilities.scss
@@ -73,6 +73,14 @@
   text-align: center;
 }
 
+.text-center-to-left-on-large {
+  text-align: center;
+
+  @media #{p.$mq-lg} {
+    text-align: left;
+  }
+}
+
 .text-right {
   text-align: right;
 }
