--- a/kitsune/sumo/static/sumo/scss/components/_card.scss
+++ b/kitsune/sumo/static/sumo/scss/components/_card.scss
@@ -76,6 +76,7 @@
 
   &--product {
     @include c.elevation-01;
+    display: flex;
     flex-direction: column;
   }
 
